# C-2D-convolution

src/: CMakeLists.txt  main.cpp
